@@ -81,11 +81,9 @@ if no_err
   %
   % Store a rough geo-position (used for HSE)
   %
-  xmlStore( fullfile( R.workfolder, 'lat_true.xml' ), ...
-                   L1B.Latitude(round(length(L1B.Latitude)/2)), ...
+  xmlStore( fullfile( R.workfolder, 'lat_true.xml' ), R.ATM.LAT1D, ...
                                                           'Vector', 'binary' );
-  xmlStore( fullfile( R.workfolder, 'lon_true.xml' ), ...
-                   L1B.Longitude(round(length(L1B.Longitude)/2)), ...
+  xmlStore( fullfile( R.workfolder, 'lon_true.xml' ), R.ATM.LON1D, ...
                                                           'Vector', 'binary' );
       
     
@@ -681,9 +679,9 @@ function [L2,L2I] = subfun4l2( Q, R, Sx, Se, LOG, L1B, X )
       L2(end).Lat1D       = R.ATM.LAT1D;
       L2(end).Lon1D       = R.ATM.LON1D;
       L2(end).Latitude    = interp1( L1B.Altitude, L1B.Latitude, ...
-                                     L2(end).Altitude, 'pchip', 'extrap' );
+                                     L2(end).Altitude, 'nearest', 'extrap' );
       L2(end).Longitude   = interp1( L1B.Altitude, L1B.Longitude, ...
-                                     L2(end).Altitude, 'pchip', 'extrap' );
+                                     L2(end).Altitude, 'nearest', 'extrap' );
       %
       % Retrieval characteristics
       lx                   = length(ind2);
